# rtk-cli

./: .gitignore  README.md  cli.py  pyproject.toml  requirements.txt  setup.py
resources/: rtk.csv  rtk2.csv
rtk_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/cli/: cli.py
src/rtk_cli/: cli.py
src/rtk_cli.egg-info/: SOURCES.txt  entry_points.txt
