[project]
name = "rtk-cli"
version = "0.1.0"
description = ""
authors = [
    {name = "Cole Lanham",email = "coleklanham@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "rich (>=14.0.0,<15.0.0)",
    "typer (>=0.15.4,<0.16.0)"
]

[tool.poetry]
packages = [{include = "rtk_cli", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
