[project]
name = "rtk-cli"
version = "0.0.1"
authors = [
  {name = "Cole Lanham", email = "coleklanham@gmail.com"},
]
description = "A CLI Tool for identifying Heisig-method primitives and explanations for Kanji characters"
readme = "README.md"
requires-python = ">=3.12.6"
dependencies = [
    click==8.2.1
    markdown-it-py==3.0.0
    mdurl==0.1.2
    numpy==2.3.2
    pandas==2.3.1
    Pygments==2.19.2
    python-dateutil==2.9.0.post0
    pytz==2025.2
    rich==14.1.0
    six==1.17.0
    tzdata==2025.2
]

