[project]
name = "rtk-cli"
version = "0.0.1"
authors = [
  {name = "Cole Lanham", email = "coleklanham@gmail.com"},
]
description = "A CLI Tool for identifying Heisig-method primitives and explanations for Kanji characters"
readme = "README.md"
requires-python = ">=3.12.6"


[project.scripts]
rtk-cli = "cli.rtk_cli:run_cli"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
